// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expect to render MainPage component 1`] = `
<div
  className="tc"
>
  <Header />
  <SearchBox />
  <Scroll>
    <ErrorBoundry>
      <CardList
        robots={Array []}
      />
    </ErrorBoundry>
  </Scroll>
</div>
`;

exports[`should shows error message when error has occurred 1`] = `
<div
  className="tc pa5 ma5"
>
  <h1>
    Error message
  </h1>
</div>
`;

exports[`should shows loading message when status is pending 1`] = `
<div
  className="tc pa5 ma5"
>
  <h1>
    Loading...
  </h1>
</div>
`;
